--- a/Direct/direct/src/App.css
+++ b/Direct/direct/src/App.css
@@ -51,9 +51,10 @@
   margin-left: 7.25rem;
 }
 .left-content {
+  display: flex;
   flex-direction: column;
-  width: 66.666667%;
-  padding-right: 1rem;
+  width: 80%;
+  margin-right: 5rem;
   margin-left: 5rem;
 }
 .Getting {
@@ -75,15 +76,14 @@
 }
 .box {
   display: flex;
-  width: 20%;
-  padding-left: 3rem;
+  width: 15%;
+  padding-left: 5rem;
   justify-content: center;
   align-items: center;
   background-color: white;
 }
 .Getting-started {
   flex-direction: column;
-  display: flex;
   width: 100%;
   border-radius: 1.5rem;
   --tw-bg-opacity: 1;
@@ -118,12 +118,15 @@
 .box-group {
   display: flex;
   margin-bottom: 12px;
-  margin-left: 24px;
   margin-right: 24px;
+  border-radius: 1.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  margin-left: 24px;
 }
 .item {
   display: flex;
-  width: 50%;
+  width: 100%;
   flex-direction: column;
   border-radius: 1.5rem;
   margin: 8px;
@@ -176,15 +179,13 @@
 }
 .paper-right {
   flex-direction: column;
-  padding-left: 0.75rem;
-  margin-left: 4rem;
+  width: 40%;
 }
 .paper-left {
   flex-direction: column;
-  width: 2000px;
-  justify-content: end;
+  width: 100%;
+
   padding-right: 0.75rem;
-  display: flex;
 }
 .wrap {
   flex-direction: column;
@@ -194,14 +195,30 @@
   background-color: rgb(247 245 244 / var(--tw-bg-opacity));
 }
 .box-assets {
+  flex-direction: column;
+  width: 70%;
   border-radius: 1.5rem;
   --tw-bg-opacity: 1;
-  padding-left: 7rem;
-
-  margin-bottom: 24px;
-  margin-top: 1rem;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  margin-top: 16px;
+  padding-left: 24px;
+}
+.assets {
+  display: flex;
+  border-radius: 1rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  justify-content: space-between;
 }
 .control {
-  padding-left: auto;
+  flex-direction: column;
+}
+.one {
+  display: flex;
+}
+.two {
+  font-size: 12px;
+}
+.war {
+  margin-right: 24px;
 }
