--- a/Direct/direct/src/App.css
+++ b/Direct/direct/src/App.css
@@ -41,21 +41,16 @@
 }
 .Home {
   display: flex;
+  max-width: 1248px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin: 0px auto;
 }
 
 .title {
   font-size: 24px;
   margin-bottom: 2rem;
   padding-top: 3.75rem;
-  padding-left: 24px;
-  margin-left: 7.25rem;
-}
-.left-content {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin-right: 5rem;
-  margin-left: 5rem;
 }
 .Getting {
   display: flex;
@@ -77,20 +72,17 @@
 .box {
   display: flex;
   width: 15%;
-  padding-left: 5rem;
   justify-content: center;
   align-items: center;
   background-color: white;
 }
 .Getting-started {
   flex-direction: column;
-  width: 100%;
   border-radius: 1.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  margin-left: 4rem;
-  margin-top: 16px;
-  padding-right: 1rem;
+  padding: 24px;
+  margin-bottom: 12px;
 }
 .number {
   width: 40px;
@@ -179,15 +171,16 @@
 }
 .paper-right {
   flex-direction: column;
-  width: 40%;
+  width: 33.33333333%;
 }
 .paper-left {
   flex-direction: column;
   width: 100%;
-
   padding-right: 0.75rem;
 }
 .wrap {
+  padding-left: 24px;
+  padding-right: 24px;
   flex-direction: column;
   border-radius: 1.5rem;
   min-height: calc(100vh - 88px);
@@ -196,12 +189,11 @@
 }
 .box-assets {
   flex-direction: column;
-  width: 70%;
   border-radius: 1.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  margin-top: 16px;
-  padding-left: 24px;
+  padding: 24px;
+  margin-bottom: 12px;
 }
 .assets {
   display: flex;
@@ -219,6 +211,9 @@
 .two {
   font-size: 12px;
 }
-.war {
-  margin-right: 24px;
+.stop {
+  max-width: 1248px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin: 0px auto;
 }
