implement layout page

--- a/src/pages/header/Header.scss
+++ b/src/pages/header/Header.scss
@@ -1,66 +1,8 @@
-.news {
+.headerContainer {
   display: flex;
-}
-.left-header {
   flex-direction: column;
-  background: #fff;
-  height: 100vh;
-  padding-bottom: 24px;
-  padding-top: 24px;
-  padding-left: 16px;
-  padding-right: 16px;
   width: 240px;
-}
-.homeflex {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  padding: 12px;
-  padding-top: 24px;
-  position: relative;
-}
-.right-header {
-  display: flex;
-  width: 100%;
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 245 244 / var(--tw-bg-opacity));
-  border-radius: 24px;
-  margin-bottom: 16px;
-}
-.img {
-  display: flex;
-  margin-left: 12px;
-}
-.radius {
-  border-bottom: solid 1px rgb(160, 157, 157);
-}
-.shortcut {
-  font-size: 12px;
-  color: rgb(95, 92, 92);
-  padding-top: 48px;
-}
-.box {
-  margin-top: 10rem;
-  display: flex;
-  border-radius: 12px;
-  background-color: white;
-  border-width: 0;
-  margin-right: 36px;
-}
-.mainnet {
-  flex-direction: column;
-  margin-bottom: 48px;
-}
-.green-dot {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 134 102 / var(--tw-bg-opacity));
-  border-radius: 12px;
-  width: 0.625rem;
-  height: 0.625rem;
-  margin-left: 12px;
-  margin-top: 24px;
-}
-.text-small {
-  font-size: 12px;
-  color: rgb(160, 20, 20);
+  .headerItem {
+    cursor: pointer;
+  }
 }
