--- a/src/pages/header/Header.scss
+++ b/src/pages/header/Header.scss
@@ -4,5 +4,10 @@
   width: 240px;
   .headerItem {
     cursor: pointer;
+    padding-bottom: 32px;
+    padding-top: 12px;
   }
+}
+.distance {
+  padding-top: 48px;
 }
