--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,17 @@
 .appContainer {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+
   .appContent {
     background: #f7f5f4;
     width: 100%;
     height: 100%;
+    border-radius: 1.5rem;
   }
+}
+.sidebar {
+  margin-bottom: 4rem;
+}
+.img {
+  width: 30%;
+  margin-left: 24px;
 }
